--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Double Foods</title>
   </head>
   <body>
-    <h1>Double Foods</h1>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <img id="logo" src="img/logo.png" alt="">
+          <p class="">Welcome to Double Foods. We sell high quality, all natural condiments and food products made in the USA.</p>
+          <p class="">
+            <strong>Questions/Comments?</strong>
+            </br>
+            <a href="mailto:team@doublefoods.com">team@doublefoods.com</a>
+          </p>
+        </div> <!-- end col -->
+      </div> <!-- end row -->
+    </div> <!-- end container -->
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
