--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p class="">
             <strong>Questions/Comments?</strong>
             </br>
-            <a href="mailto:team@doublefoods.com">team@doublefoods.com</a>
+            <a href="mailto:team@doubleinternational.com">team@doubleinternational.com</a>
           </p>
         </div> <!-- end col -->
       </div> <!-- end row -->
